start of a de-warn

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
 	"type" : "library",
 	"description" : "radical-php",
 	"require" : {
-		"php" : ">=5.4"
-	}
+		"php" : ">=5.4",
+		"splitice/radical-basic" : "dev-master",
+		"splitice/radical-web" : "dev-master",
+		"splitice/radical-common" : "dev-master",
+		"splitice/radical-db" : "dev-master"
+	},
+	"minimum-stability" : "dev"
 }
